aks/kubernetes_deploy.yml
kind: Service
apiVersion: #{aks_service_version}#
metadata:
  name: prova
  namespace: services
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
    - name: http-prova
      port: 8080
  selector:
    app: prova
  type: ClusterIP
---
apiVersion: #{aks_deployment_version}#
kind: Deployment
metadata:
  name: prova
  namespace: services
  labels:
    app: prova
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  replicas: 2
  selector:
    matchLabels:
      app: prova
  minReadySeconds: 5
  template:
    metadata:
      annotations:
        ad.datadoghq.com/prova.logs: '[{"source":"prova","service":"prova"}]'
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
      labels:
        app: prova
        release: "#{RELEASE_NUM}#"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - prova
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: prova
          image: #{ACR}#/#{CONTAINER_REPOSITORY}#:#{IMAGE_VERSION}#
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 40
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 300
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 2
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: "/config"
      volumes:
        - name: config-volume
          configMap:
            name: configmap-prova
            items:
              - key: application.yml
                path: application.yml
